parser/output/NestedSelectorsParser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> nested-selectors
Rule 1     empty -> <empty>
Rule 2     nested-selectors -> selectors LBRACE
Rule 3     selectors -> selector COMMA space-opt selectors
Rule 4     space-opt -> space
Rule 5     space-opt -> empty
Rule 6     selectors -> selector
Rule 7     space -> space-delimiter space
Rule 8     selector -> simple-selector combinator selector
Rule 9     space -> space-delimiter
Rule 10    selector -> simple-selector space-opt
Rule 11    space-delimiter -> whitespace
Rule 12    space-delimiter -> blockcomment
Rule 13    space-delimiter -> htmlcomment
Rule 14    simple-selector -> type-selector selector-rules-opt
Rule 15    simple-selector -> selector-rules
Rule 16    whitespace -> SPACE
Rule 17    blockcomment -> BLOCKCOMMENT
Rule 18    type-selector -> element-selector
Rule 19    type-selector -> all-selector
Rule 20    htmlcomment -> CDO
Rule 21    htmlcomment -> CDC
Rule 22    element-selector -> namespace-prefix-opt element-name
Rule 23    all-selector -> namespace-prefix-opt OP_MUL
Rule 24    namespace-prefix-opt -> namespace-prefix
Rule 25    namespace-prefix-opt -> empty
Rule 26    namespace-prefix -> NAMESPACE_PREFIX
Rule 27    element-name -> IDENTIFIER
Rule 28    selector-rules-opt -> selector-rules
Rule 29    selector-rules-opt -> empty
Rule 30    selector-rules -> selector-rule selector-rules
Rule 31    selector-rules -> selector-rule
Rule 32    selector-rule -> hash
Rule 33    selector-rule -> class
Rule 34    selector-rule -> attribute
Rule 35    selector-rule -> pseudo
Rule 36    selector-rule -> negation
Rule 37    combinator -> space-opt combinator-op
Rule 38    combinator -> space
Rule 39    combinator-op -> OP_PLUS space-opt
Rule 40    combinator-op -> OP_GT space-opt
Rule 41    combinator-op -> OP_TILDE space-opt
Rule 42    hash -> HASH
Rule 43    class -> DOT IDENTIFIER
Rule 44    attribute -> LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
Rule 45    attribute-match-opt -> attribute-match
Rule 46    attribute-match-opt -> empty
Rule 47    attribute-match -> attribute-op attribute-value
Rule 48    attribute-op -> OP_PREFIXMATCH space-opt
Rule 49    attribute-op -> OP_SUFFIXMATCH space-opt
Rule 50    attribute-op -> OP_SUBSTRINGMATCH space-opt
Rule 51    attribute-op -> OP_INCLUDES space-opt
Rule 52    attribute-op -> OP_DASHMATCH space-opt
Rule 53    attribute-op -> OP_EQUALS space-opt
Rule 54    attribute-value -> IDENTIFIER space-opt
Rule 55    attribute-value -> STRING space-opt
Rule 56    pseudo -> COLON pseudo-selector
Rule 57    pseudo -> COLON COLON pseudo-selector
Rule 58    pseudo-selector -> IDENTIFIER
Rule 59    pseudo-selector -> pseudo-function
Rule 60    pseudo-function -> FUNCTION space-opt pseudo-expression RPAREN
Rule 61    pseudo-expression -> pseudo-term pseudo-expression
Rule 62    pseudo-expression -> pseudo-term
Rule 63    pseudo-term -> OP_PLUS space-opt
Rule 64    pseudo-term -> OP_MINUS space-opt
Rule 65    pseudo-term -> DIMENSION space-opt
Rule 66    pseudo-term -> NUMBER space-opt
Rule 67    pseudo-term -> STRING space-opt
Rule 68    pseudo-term -> IDENTIFIER space-opt
Rule 69    negation -> NOT_SELECTOR space-opt negation-argument RPAREN
Rule 70    negation-argument -> type-selector space-opt
Rule 71    negation-argument -> hash space-opt
Rule 72    negation-argument -> class space-opt
Rule 73    negation-argument -> attribute space-opt
Rule 74    negation-argument -> pseudo space-opt

Terminals, with rules where they appear

BLOCKCOMMENT         : 17
CDC                  : 21
CDO                  : 20
COLON                : 56 57 57
COMMA                : 3
DIMENSION            : 65
DOT                  : 43
FUNCTION             : 60
HASH                 : 42
IDENTIFIER           : 27 43 44 54 58 68
LBRACE               : 2
LBRACKET             : 44
NAMESPACE_PREFIX     : 26
NOT_SELECTOR         : 69
NUMBER               : 66
OP_DASHMATCH         : 52
OP_EQUALS            : 53
OP_GT                : 40
OP_INCLUDES          : 51
OP_MINUS             : 64
OP_MUL               : 23
OP_PLUS              : 39 63
OP_PREFIXMATCH       : 48
OP_SUBSTRINGMATCH    : 50
OP_SUFFIXMATCH       : 49
OP_TILDE             : 41
RBRACKET             : 44
RPAREN               : 60 69
SPACE                : 16
STRING               : 55 67
error                : 

Nonterminals, with rules where they appear

all-selector         : 19
attribute            : 34 73
attribute-match      : 45
attribute-match-opt  : 44
attribute-op         : 47
attribute-value      : 47
blockcomment         : 12
class                : 33 72
combinator           : 8
combinator-op        : 37
element-name         : 22
element-selector     : 18
empty                : 5 25 29 46
hash                 : 32 71
htmlcomment          : 13
namespace-prefix     : 24
namespace-prefix-opt : 22 23 44
negation             : 36
negation-argument    : 69
nested-selectors     : 0
pseudo               : 35 74
pseudo-expression    : 60 61
pseudo-function      : 59
pseudo-selector      : 56 57
pseudo-term          : 61 62
selector             : 3 6 8
selector-rule        : 30 31
selector-rules       : 15 28 30
selector-rules-opt   : 14
selectors            : 2 3
simple-selector      : 8 10
space                : 4 7 38
space-delimiter      : 7 9
space-opt            : 3 10 37 39 40 41 44 44 48 49 50 51 52 53 54 55 60 63 64 65 66 67 68 69 70 71 72 73 74
type-selector        : 14 70
whitespace           : 11

Parsing method: LALR

state 0

    (0) S' -> . nested-selectors
    (2) nested-selectors -> . selectors LBRACE
    (3) selectors -> . selector COMMA space-opt selectors
    (6) selectors -> . selector
    (8) selector -> . simple-selector combinator selector
    (10) selector -> . simple-selector space-opt
    (14) simple-selector -> . type-selector selector-rules-opt
    (15) simple-selector -> . selector-rules
    (18) type-selector -> . element-selector
    (19) type-selector -> . all-selector
    (30) selector-rules -> . selector-rule selector-rules
    (31) selector-rules -> . selector-rule
    (22) element-selector -> . namespace-prefix-opt element-name
    (23) all-selector -> . namespace-prefix-opt OP_MUL
    (32) selector-rule -> . hash
    (33) selector-rule -> . class
    (34) selector-rule -> . attribute
    (35) selector-rule -> . pseudo
    (36) selector-rule -> . negation
    (24) namespace-prefix-opt -> . namespace-prefix
    (25) namespace-prefix-opt -> . empty
    (42) hash -> . HASH
    (43) class -> . DOT IDENTIFIER
    (44) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (56) pseudo -> . COLON pseudo-selector
    (57) pseudo -> . COLON COLON pseudo-selector
    (69) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN
    (26) namespace-prefix -> . NAMESPACE_PREFIX
    (1) empty -> .

    HASH            shift and go to state 16
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 22
    NAMESPACE_PREFIX shift and go to state 23
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)

    attribute                      shift and go to state 1
    namespace-prefix               shift and go to state 2
    type-selector                  shift and go to state 3
    hash                           shift and go to state 5
    element-selector               shift and go to state 7
    all-selector                   shift and go to state 8
    simple-selector                shift and go to state 9
    negation                       shift and go to state 10
    empty                          shift and go to state 12
    selector-rule                  shift and go to state 13
    nested-selectors               shift and go to state 14
    selector                       shift and go to state 15
    class                          shift and go to state 17
    namespace-prefix-opt           shift and go to state 18
    selector-rules                 shift and go to state 19
    pseudo                         shift and go to state 20
    selectors                      shift and go to state 21

state 1

    (34) selector-rule -> attribute .

    HASH            reduce using rule 34 (selector-rule -> attribute .)
    DOT             reduce using rule 34 (selector-rule -> attribute .)
    LBRACKET        reduce using rule 34 (selector-rule -> attribute .)
    COLON           reduce using rule 34 (selector-rule -> attribute .)
    NOT_SELECTOR    reduce using rule 34 (selector-rule -> attribute .)
    SPACE           reduce using rule 34 (selector-rule -> attribute .)
    BLOCKCOMMENT    reduce using rule 34 (selector-rule -> attribute .)
    CDO             reduce using rule 34 (selector-rule -> attribute .)
    CDC             reduce using rule 34 (selector-rule -> attribute .)
    OP_PLUS         reduce using rule 34 (selector-rule -> attribute .)
    OP_GT           reduce using rule 34 (selector-rule -> attribute .)
    OP_TILDE        reduce using rule 34 (selector-rule -> attribute .)
    COMMA           reduce using rule 34 (selector-rule -> attribute .)
    LBRACE          reduce using rule 34 (selector-rule -> attribute .)


state 2

    (24) namespace-prefix-opt -> namespace-prefix .

    IDENTIFIER      reduce using rule 24 (namespace-prefix-opt -> namespace-prefix .)
    OP_MUL          reduce using rule 24 (namespace-prefix-opt -> namespace-prefix .)


state 3

    (14) simple-selector -> type-selector . selector-rules-opt
    (28) selector-rules-opt -> . selector-rules
    (29) selector-rules-opt -> . empty
    (30) selector-rules -> . selector-rule selector-rules
    (31) selector-rules -> . selector-rule
    (1) empty -> .
    (32) selector-rule -> . hash
    (33) selector-rule -> . class
    (34) selector-rule -> . attribute
    (35) selector-rule -> . pseudo
    (36) selector-rule -> . negation
    (42) hash -> . HASH
    (43) class -> . DOT IDENTIFIER
    (44) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (56) pseudo -> . COLON pseudo-selector
    (57) pseudo -> . COLON COLON pseudo-selector
    (69) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN

    SPACE           reduce using rule 1 (empty -> .)
    BLOCKCOMMENT    reduce using rule 1 (empty -> .)
    CDO             reduce using rule 1 (empty -> .)
    CDC             reduce using rule 1 (empty -> .)
    OP_PLUS         reduce using rule 1 (empty -> .)
    OP_GT           reduce using rule 1 (empty -> .)
    OP_TILDE        reduce using rule 1 (empty -> .)
    COMMA           reduce using rule 1 (empty -> .)
    LBRACE          reduce using rule 1 (empty -> .)
    HASH            shift and go to state 16
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 22

    hash                           shift and go to state 5
    selector-rules-opt             shift and go to state 25
    attribute                      shift and go to state 1
    selector-rules                 shift and go to state 26
    pseudo                         shift and go to state 20
    negation                       shift and go to state 10
    class                          shift and go to state 17
    empty                          shift and go to state 24
    selector-rule                  shift and go to state 13

state 4

    (44) attribute -> LBRACKET . space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (4) space-opt -> . space
    (5) space-opt -> . empty
    (7) space -> . space-delimiter space
    (9) space -> . space-delimiter
    (1) empty -> .
    (11) space-delimiter -> . whitespace
    (12) space-delimiter -> . blockcomment
    (13) space-delimiter -> . htmlcomment
    (16) whitespace -> . SPACE
    (17) blockcomment -> . BLOCKCOMMENT
    (20) htmlcomment -> . CDO
    (21) htmlcomment -> . CDC

    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 31
    BLOCKCOMMENT    shift and go to state 35
    CDO             shift and go to state 28
    CDC             shift and go to state 32

    htmlcomment                    shift and go to state 27
    whitespace                     shift and go to state 29
    space                          shift and go to state 30
    space-opt                      shift and go to state 33
    space-delimiter                shift and go to state 34
    blockcomment                   shift and go to state 36
    empty                          shift and go to state 37

state 5

    (32) selector-rule -> hash .

    HASH            reduce using rule 32 (selector-rule -> hash .)
    DOT             reduce using rule 32 (selector-rule -> hash .)
    LBRACKET        reduce using rule 32 (selector-rule -> hash .)
    COLON           reduce using rule 32 (selector-rule -> hash .)
    NOT_SELECTOR    reduce using rule 32 (selector-rule -> hash .)
    SPACE           reduce using rule 32 (selector-rule -> hash .)
    BLOCKCOMMENT    reduce using rule 32 (selector-rule -> hash .)
    CDO             reduce using rule 32 (selector-rule -> hash .)
    CDC             reduce using rule 32 (selector-rule -> hash .)
    OP_PLUS         reduce using rule 32 (selector-rule -> hash .)
    OP_GT           reduce using rule 32 (selector-rule -> hash .)
    OP_TILDE        reduce using rule 32 (selector-rule -> hash .)
    COMMA           reduce using rule 32 (selector-rule -> hash .)
    LBRACE          reduce using rule 32 (selector-rule -> hash .)


state 6

    (43) class -> DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 38


state 7

    (18) type-selector -> element-selector .

    HASH            reduce using rule 18 (type-selector -> element-selector .)
    DOT             reduce using rule 18 (type-selector -> element-selector .)
    LBRACKET        reduce using rule 18 (type-selector -> element-selector .)
    COLON           reduce using rule 18 (type-selector -> element-selector .)
    NOT_SELECTOR    reduce using rule 18 (type-selector -> element-selector .)
    SPACE           reduce using rule 18 (type-selector -> element-selector .)
    BLOCKCOMMENT    reduce using rule 18 (type-selector -> element-selector .)
    CDO             reduce using rule 18 (type-selector -> element-selector .)
    CDC             reduce using rule 18 (type-selector -> element-selector .)
    OP_PLUS         reduce using rule 18 (type-selector -> element-selector .)
    OP_GT           reduce using rule 18 (type-selector -> element-selector .)
    OP_TILDE        reduce using rule 18 (type-selector -> element-selector .)
    COMMA           reduce using rule 18 (type-selector -> element-selector .)
    LBRACE          reduce using rule 18 (type-selector -> element-selector .)
    RPAREN          reduce using rule 18 (type-selector -> element-selector .)


state 8

    (19) type-selector -> all-selector .

    HASH            reduce using rule 19 (type-selector -> all-selector .)
    DOT             reduce using rule 19 (type-selector -> all-selector .)
    LBRACKET        reduce using rule 19 (type-selector -> all-selector .)
    COLON           reduce using rule 19 (type-selector -> all-selector .)
    NOT_SELECTOR    reduce using rule 19 (type-selector -> all-selector .)
    SPACE           reduce using rule 19 (type-selector -> all-selector .)
    BLOCKCOMMENT    reduce using rule 19 (type-selector -> all-selector .)
    CDO             reduce using rule 19 (type-selector -> all-selector .)
    CDC             reduce using rule 19 (type-selector -> all-selector .)
    OP_PLUS         reduce using rule 19 (type-selector -> all-selector .)
    OP_GT           reduce using rule 19 (type-selector -> all-selector .)
    OP_TILDE        reduce using rule 19 (type-selector -> all-selector .)
    COMMA           reduce using rule 19 (type-selector -> all-selector .)
    LBRACE          reduce using rule 19 (type-selector -> all-selector .)
    RPAREN          reduce using rule 19 (type-selector -> all-selector .)


state 9

    (8) selector -> simple-selector . combinator selector
    (10) selector -> simple-selector . space-opt
    (37) combinator -> . space-opt combinator-op
    (38) combinator -> . space
    (4) space-opt -> . space
    (5) space-opt -> . empty
    (7) space -> . space-delimiter space
    (9) space -> . space-delimiter
    (1) empty -> .
    (11) space-delimiter -> . whitespace
    (12) space-delimiter -> . blockcomment
    (13) space-delimiter -> . htmlcomment
    (16) whitespace -> . SPACE
    (17) blockcomment -> . BLOCKCOMMENT
    (20) htmlcomment -> . CDO
    (21) htmlcomment -> . CDC

    OP_PLUS         reduce using rule 1 (empty -> .)
    OP_GT           reduce using rule 1 (empty -> .)
    OP_TILDE        reduce using rule 1 (empty -> .)
    COMMA           reduce using rule 1 (empty -> .)
    LBRACE          reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 31
    BLOCKCOMMENT    shift and go to state 35
    CDO             shift and go to state 28
    CDC             shift and go to state 32

    htmlcomment                    shift and go to state 27
    whitespace                     shift and go to state 29
    space                          shift and go to state 39
    blockcomment                   shift and go to state 36
    combinator                     shift and go to state 40
    space-opt                      shift and go to state 41
    space-delimiter                shift and go to state 34
    empty                          shift and go to state 37

state 10

    (36) selector-rule -> negation .

    HASH            reduce using rule 36 (selector-rule -> negation .)
    DOT             reduce using rule 36 (selector-rule -> negation .)
    LBRACKET        reduce using rule 36 (selector-rule -> negation .)
    COLON           reduce using rule 36 (selector-rule -> negation .)
    NOT_SELECTOR    reduce using rule 36 (selector-rule -> negation .)
    SPACE           reduce using rule 36 (selector-rule -> negation .)
    BLOCKCOMMENT    reduce using rule 36 (selector-rule -> negation .)
    CDO             reduce using rule 36 (selector-rule -> negation .)
    CDC             reduce using rule 36 (selector-rule -> negation .)
    OP_PLUS         reduce using rule 36 (selector-rule -> negation .)
    OP_GT           reduce using rule 36 (selector-rule -> negation .)
    OP_TILDE        reduce using rule 36 (selector-rule -> negation .)
    COMMA           reduce using rule 36 (selector-rule -> negation .)
    LBRACE          reduce using rule 36 (selector-rule -> negation .)


state 11

    (56) pseudo -> COLON . pseudo-selector
    (57) pseudo -> COLON . COLON pseudo-selector
    (58) pseudo-selector -> . IDENTIFIER
    (59) pseudo-selector -> . pseudo-function
    (60) pseudo-function -> . FUNCTION space-opt pseudo-expression RPAREN

    COLON           shift and go to state 44
    IDENTIFIER      shift and go to state 46
    FUNCTION        shift and go to state 43

    pseudo-function                shift and go to state 42
    pseudo-selector                shift and go to state 45

state 12

    (25) namespace-prefix-opt -> empty .

    IDENTIFIER      reduce using rule 25 (namespace-prefix-opt -> empty .)
    OP_MUL          reduce using rule 25 (namespace-prefix-opt -> empty .)


state 13

    (30) selector-rules -> selector-rule . selector-rules
    (31) selector-rules -> selector-rule .
    (30) selector-rules -> . selector-rule selector-rules
    (31) selector-rules -> . selector-rule
    (32) selector-rule -> . hash
    (33) selector-rule -> . class
    (34) selector-rule -> . attribute
    (35) selector-rule -> . pseudo
    (36) selector-rule -> . negation
    (42) hash -> . HASH
    (43) class -> . DOT IDENTIFIER
    (44) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (56) pseudo -> . COLON pseudo-selector
    (57) pseudo -> . COLON COLON pseudo-selector
    (69) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN

    SPACE           reduce using rule 31 (selector-rules -> selector-rule .)
    BLOCKCOMMENT    reduce using rule 31 (selector-rules -> selector-rule .)
    CDO             reduce using rule 31 (selector-rules -> selector-rule .)
    CDC             reduce using rule 31 (selector-rules -> selector-rule .)
    OP_PLUS         reduce using rule 31 (selector-rules -> selector-rule .)
    OP_GT           reduce using rule 31 (selector-rules -> selector-rule .)
    OP_TILDE        reduce using rule 31 (selector-rules -> selector-rule .)
    COMMA           reduce using rule 31 (selector-rules -> selector-rule .)
    LBRACE          reduce using rule 31 (selector-rules -> selector-rule .)
    HASH            shift and go to state 16
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 22

    hash                           shift and go to state 5
    attribute                      shift and go to state 1
    selector-rules                 shift and go to state 47
    pseudo                         shift and go to state 20
    negation                       shift and go to state 10
    class                          shift and go to state 17
    selector-rule                  shift and go to state 13

state 14

    (0) S' -> nested-selectors .



state 15

    (3) selectors -> selector . COMMA space-opt selectors
    (6) selectors -> selector .

    COMMA           shift and go to state 48
    LBRACE          reduce using rule 6 (selectors -> selector .)


state 16

    (42) hash -> HASH .

    SPACE           reduce using rule 42 (hash -> HASH .)
    BLOCKCOMMENT    reduce using rule 42 (hash -> HASH .)
    CDO             reduce using rule 42 (hash -> HASH .)
    CDC             reduce using rule 42 (hash -> HASH .)
    RPAREN          reduce using rule 42 (hash -> HASH .)
    HASH            reduce using rule 42 (hash -> HASH .)
    DOT             reduce using rule 42 (hash -> HASH .)
    LBRACKET        reduce using rule 42 (hash -> HASH .)
    COLON           reduce using rule 42 (hash -> HASH .)
    NOT_SELECTOR    reduce using rule 42 (hash -> HASH .)
    OP_PLUS         reduce using rule 42 (hash -> HASH .)
    OP_GT           reduce using rule 42 (hash -> HASH .)
    OP_TILDE        reduce using rule 42 (hash -> HASH .)
    COMMA           reduce using rule 42 (hash -> HASH .)
    LBRACE          reduce using rule 42 (hash -> HASH .)


state 17

    (33) selector-rule -> class .

    HASH            reduce using rule 33 (selector-rule -> class .)
    DOT             reduce using rule 33 (selector-rule -> class .)
    LBRACKET        reduce using rule 33 (selector-rule -> class .)
    COLON           reduce using rule 33 (selector-rule -> class .)
    NOT_SELECTOR    reduce using rule 33 (selector-rule -> class .)
    SPACE           reduce using rule 33 (selector-rule -> class .)
    BLOCKCOMMENT    reduce using rule 33 (selector-rule -> class .)
    CDO             reduce using rule 33 (selector-rule -> class .)
    CDC             reduce using rule 33 (selector-rule -> class .)
    OP_PLUS         reduce using rule 33 (selector-rule -> class .)
    OP_GT           reduce using rule 33 (selector-rule -> class .)
    OP_TILDE        reduce using rule 33 (selector-rule -> class .)
    COMMA           reduce using rule 33 (selector-rule -> class .)
    LBRACE          reduce using rule 33 (selector-rule -> class .)


state 18

    (22) element-selector -> namespace-prefix-opt . element-name
    (23) all-selector -> namespace-prefix-opt . OP_MUL
    (27) element-name -> . IDENTIFIER

    OP_MUL          shift and go to state 51
    IDENTIFIER      shift and go to state 50

    element-name                   shift and go to state 49

state 19

    (15) simple-selector -> selector-rules .

    SPACE           reduce using rule 15 (simple-selector -> selector-rules .)
    BLOCKCOMMENT    reduce using rule 15 (simple-selector -> selector-rules .)
    CDO             reduce using rule 15 (simple-selector -> selector-rules .)
    CDC             reduce using rule 15 (simple-selector -> selector-rules .)
    OP_PLUS         reduce using rule 15 (simple-selector -> selector-rules .)
    OP_GT           reduce using rule 15 (simple-selector -> selector-rules .)
    OP_TILDE        reduce using rule 15 (simple-selector -> selector-rules .)
    COMMA           reduce using rule 15 (simple-selector -> selector-rules .)
    LBRACE          reduce using rule 15 (simple-selector -> selector-rules .)


state 20

    (35) selector-rule -> pseudo .

    HASH            reduce using rule 35 (selector-rule -> pseudo .)
    DOT             reduce using rule 35 (selector-rule -> pseudo .)
    LBRACKET        reduce using rule 35 (selector-rule -> pseudo .)
    COLON           reduce using rule 35 (selector-rule -> pseudo .)
    NOT_SELECTOR    reduce using rule 35 (selector-rule -> pseudo .)
    SPACE           reduce using rule 35 (selector-rule -> pseudo .)
    BLOCKCOMMENT    reduce using rule 35 (selector-rule -> pseudo .)
    CDO             reduce using rule 35 (selector-rule -> pseudo .)
    CDC             reduce using rule 35 (selector-rule -> pseudo .)
    OP_PLUS         reduce using rule 35 (selector-rule -> pseudo .)
    OP_GT           reduce using rule 35 (selector-rule -> pseudo .)
    OP_TILDE        reduce using rule 35 (selector-rule -> pseudo .)
    COMMA           reduce using rule 35 (selector-rule -> pseudo .)
    LBRACE          reduce using rule 35 (selector-rule -> pseudo .)


state 21

    (2) nested-selectors -> selectors . LBRACE

    LBRACE          shift and go to state 52


state 22

    (69) negation -> NOT_SELECTOR . space-opt negation-argument RPAREN
    (4) space-opt -> . space
    (5) space-opt -> . empty
    (7) space -> . space-delimiter space
    (9) space -> . space-delimiter
    (1) empty -> .
    (11) space-delimiter -> . whitespace
    (12) space-delimiter -> . blockcomment
    (13) space-delimiter -> . htmlcomment
    (16) whitespace -> . SPACE
    (17) blockcomment -> . BLOCKCOMMENT
    (20) htmlcomment -> . CDO
    (21) htmlcomment -> . CDC

    HASH            reduce using rule 1 (empty -> .)
    DOT             reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)
    COLON           reduce using rule 1 (empty -> .)
    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 31
    BLOCKCOMMENT    shift and go to state 35
    CDO             shift and go to state 28
    CDC             shift and go to state 32

    htmlcomment                    shift and go to state 27
    whitespace                     shift and go to state 29
    space                          shift and go to state 30
    blockcomment                   shift and go to state 36
    space-opt                      shift and go to state 53
    space-delimiter                shift and go to state 34
    empty                          shift and go to state 37

state 23

    (26) namespace-prefix -> NAMESPACE_PREFIX .

    OP_MUL          reduce using rule 26 (namespace-prefix -> NAMESPACE_PREFIX .)
    IDENTIFIER      reduce using rule 26 (namespace-prefix -> NAMESPACE_PREFIX .)


state 24

    (29) selector-rules-opt -> empty .

    SPACE           reduce using rule 29 (selector-rules-opt -> empty .)
    BLOCKCOMMENT    reduce using rule 29 (selector-rules-opt -> empty .)
    CDO             reduce using rule 29 (selector-rules-opt -> empty .)
    CDC             reduce using rule 29 (selector-rules-opt -> empty .)
    OP_PLUS         reduce using rule 29 (selector-rules-opt -> empty .)
    OP_GT           reduce using rule 29 (selector-rules-opt -> empty .)
    OP_TILDE        reduce using rule 29 (selector-rules-opt -> empty .)
    COMMA           reduce using rule 29 (selector-rules-opt -> empty .)
    LBRACE          reduce using rule 29 (selector-rules-opt -> empty .)


state 25

    (14) simple-selector -> type-selector selector-rules-opt .

    SPACE           reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    BLOCKCOMMENT    reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    CDO             reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    CDC             reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    OP_PLUS         reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    OP_GT           reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    OP_TILDE        reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    COMMA           reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)
    LBRACE          reduce using rule 14 (simple-selector -> type-selector selector-rules-opt .)


state 26

    (28) selector-rules-opt -> selector-rules .

    SPACE           reduce using rule 28 (selector-rules-opt -> selector-rules .)
    BLOCKCOMMENT    reduce using rule 28 (selector-rules-opt -> selector-rules .)
    CDO             reduce using rule 28 (selector-rules-opt -> selector-rules .)
    CDC             reduce using rule 28 (selector-rules-opt -> selector-rules .)
    OP_PLUS         reduce using rule 28 (selector-rules-opt -> selector-rules .)
    OP_GT           reduce using rule 28 (selector-rules-opt -> selector-rules .)
    OP_TILDE        reduce using rule 28 (selector-rules-opt -> selector-rules .)
    COMMA           reduce using rule 28 (selector-rules-opt -> selector-rules .)
    LBRACE          reduce using rule 28 (selector-rules-opt -> selector-rules .)


state 27

    (13) space-delimiter -> htmlcomment .

    SPACE           reduce using rule 13 (space-delimiter -> htmlcomment .)
    BLOCKCOMMENT    reduce using rule 13 (space-delimiter -> htmlcomment .)
    CDO             reduce using rule 13 (space-delimiter -> htmlcomment .)
    CDC             reduce using rule 13 (space-delimiter -> htmlcomment .)
    RPAREN          reduce using rule 13 (space-delimiter -> htmlcomment .)
    IDENTIFIER      reduce using rule 13 (space-delimiter -> htmlcomment .)
    STRING          reduce using rule 13 (space-delimiter -> htmlcomment .)
    HASH            reduce using rule 13 (space-delimiter -> htmlcomment .)
    DOT             reduce using rule 13 (space-delimiter -> htmlcomment .)
    LBRACKET        reduce using rule 13 (space-delimiter -> htmlcomment .)
    COLON           reduce using rule 13 (space-delimiter -> htmlcomment .)
    NOT_SELECTOR    reduce using rule 13 (space-delimiter -> htmlcomment .)
    NAMESPACE_PREFIX reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_MUL          reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_PREFIXMATCH  reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_SUFFIXMATCH  reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_SUBSTRINGMATCH reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_INCLUDES     reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_DASHMATCH    reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_EQUALS       reduce using rule 13 (space-delimiter -> htmlcomment .)
    RBRACKET        reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_PLUS         reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_MINUS        reduce using rule 13 (space-delimiter -> htmlcomment .)
    DIMENSION       reduce using rule 13 (space-delimiter -> htmlcomment .)
    NUMBER          reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_GT           reduce using rule 13 (space-delimiter -> htmlcomment .)
    OP_TILDE        reduce using rule 13 (space-delimiter -> htmlcomment .)
    COMMA           reduce using rule 13 (space-delimiter -> htmlcomment .)
    LBRACE          reduce using rule 13 (space-delimiter -> htmlcomment .)


state 28

    (20) htmlcomment -> CDO .
